KqaPro_Parser/program/.antlr/ProgramParser.java
// Generated from /home/lynie/proj/KqaPro_IR/KqaPro_Parser/program/Program.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProgramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, WS=41, STRING_LITERAL=42, INTEGER=43, DECIMAL=44, 
		DOUBLE=45, EXPONENT=46, DIGIT=47, FUNC_SEP=48, IN_FUNC_SEP=49;
	public static final int
		RULE_query = 0, RULE_whatEntityQuery = 1, RULE_howManyEntityQuery = 2, 
		RULE_whatAttributeQuery = 3, RULE_whatRelationQuery = 4, RULE_selectAmongQuery = 5, 
		RULE_selectBetweenQuery = 6, RULE_attributeSatisfyQuery = 7, RULE_whatAttributeQualifierQuery = 8, 
		RULE_whatRelationQualifierQuery = 9, RULE_entitySetGroup = 10, RULE_entitySet = 11, 
		RULE_entityFilterByRelation = 12, RULE_entityFilterByAttribute = 13, RULE_entityFilterByConcept = 14, 
		RULE_queryName = 15, RULE_count = 16, RULE_findAll = 17, RULE_setOP = 18, 
		RULE_intersect = 19, RULE_union = 20, RULE_filterAttr = 21, RULE_filterStr = 22, 
		RULE_filterNum = 23, RULE_filterYear = 24, RULE_filterDate = 25, RULE_queryRelation = 26, 
		RULE_selectAmong = 27, RULE_selectBetween = 28, RULE_queryAttributeUnderCondition = 29, 
		RULE_queryAttribute = 30, RULE_verify = 31, RULE_verifyStr = 32, RULE_verifyNum = 33, 
		RULE_verifyYear = 34, RULE_verifyDate = 35, RULE_queryAttrQualifier = 36, 
		RULE_queryRelationQualifier = 37, RULE_relate = 38, RULE_filterQualifier = 39, 
		RULE_filterStrQualifier = 40, RULE_filterNumQualifier = 41, RULE_filterYearQualifier = 42, 
		RULE_filterDateQualifier = 43, RULE_filterConcept = 44, RULE_entity = 45, 
		RULE_concept = 46, RULE_predicate = 47, RULE_key = 48, RULE_value = 49, 
		RULE_qkey = 50, RULE_qvalue = 51, RULE_op = 52, RULE_symbolOP = 53, RULE_stringOP = 54, 
		RULE_direction = 55, RULE_string = 56, RULE_date = 57, RULE_year = 58, 
		RULE_number = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "whatEntityQuery", "howManyEntityQuery", "whatAttributeQuery", 
			"whatRelationQuery", "selectAmongQuery", "selectBetweenQuery", "attributeSatisfyQuery", 
			"whatAttributeQualifierQuery", "whatRelationQualifierQuery", "entitySetGroup", 
			"entitySet", "entityFilterByRelation", "entityFilterByAttribute", "entityFilterByConcept", 
			"queryName", "count", "findAll", "setOP", "intersect", "union", "filterAttr", 
			"filterStr", "filterNum", "filterYear", "filterDate", "queryRelation", 
			"selectAmong", "selectBetween", "queryAttributeUnderCondition", "queryAttribute", 
			"verify", "verifyStr", "verifyNum", "verifyYear", "verifyDate", "queryAttrQualifier", 
			"queryRelationQualifier", "relate", "filterQualifier", "filterStrQualifier", 
			"filterNumQualifier", "filterYearQualifier", "filterDateQualifier", "filterConcept", 
			"entity", "concept", "predicate", "key", "value", "qkey", "qvalue", "op", 
			"symbolOP", "stringOP", "direction", "string", "date", "year", "number"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'What()'", "'Count()'", "'FindAll()'", "'And()'", "'Or()'", "'FilterStr('", 
			"')'", "'FilterNum('", "'FilterYear('", "'FilterDate('", "'QueryRelation()'", 
			"'SelectAmong('", "'SelectBetween('", "'QueryAttrUnderCondition('", "'QueryAttr('", 
			"'VerifyStr('", "'VerifyNum('", "'VerifyYear('", "'VerifyDate('", "'QueryAttrQualifier('", 
			"'QueryRelationQualifier('", "'Relate('", "'QFilterStr('", "'QFilterNum('", 
			"'QFilterYear('", "'QFilterDate('", "'FilterConcept('", "'Find('", "'='", 
			"'<'", "'>'", "'!='", "'greater'", "'less'", "'largest'", "'smallest'", 
			"'forward'", "'backward'", "'('", "'-'", null, null, null, null, null, 
			null, null, "'<b>'", "'<c>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "WS", "STRING_LITERAL", "INTEGER", "DECIMAL", 
			"DOUBLE", "EXPONENT", "DIGIT", "FUNC_SEP", "IN_FUNC_SEP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Program.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProgramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class QueryContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ProgramParser.EOF, 0); }
		public WhatEntityQueryContext whatEntityQuery() {
			return getRuleContext(WhatEntityQueryContext.class,0);
		}
		public HowManyEntityQueryContext howManyEntityQuery() {
			return getRuleContext(HowManyEntityQueryContext.class,0);
		}
		public WhatAttributeQueryContext whatAttributeQuery() {
			return getRuleContext(WhatAttributeQueryContext.class,0);
		}
		public WhatRelationQueryContext whatRelationQuery() {
			return getRuleContext(WhatRelationQueryContext.class,0);
		}
		public SelectAmongQueryContext selectAmongQuery() {
			return getRuleContext(SelectAmongQueryContext.class,0);
		}
		public SelectBetweenQueryContext selectBetweenQuery() {
			return getRuleContext(SelectBetweenQueryContext.class,0);
		}
		public AttributeSatisfyQueryContext attributeSatisfyQuery() {
			return getRuleContext(AttributeSatisfyQueryContext.class,0);
		}
		public WhatAttributeQualifierQueryContext whatAttributeQualifierQuery() {
			return getRuleContext(WhatAttributeQualifierQueryContext.class,0);
		}
		public WhatRelationQualifierQueryContext whatRelationQualifierQuery() {
			return getRuleContext(WhatRelationQualifierQueryContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(120);
				whatEntityQuery();
				}
				break;
			case 2:
				{
				setState(121);
				howManyEntityQuery();
				}
				break;
			case 3:
				{
				setState(122);
				whatAttributeQuery();
				}
				break;
			case 4:
				{
				setState(123);
				whatRelationQuery();
				}
				break;
			case 5:
				{
				setState(124);
				selectAmongQuery();
				}
				break;
			case 6:
				{
				setState(125);
				selectBetweenQuery();
				}
				break;
			case 7:
				{
				setState(126);
				attributeSatisfyQuery();
				}
				break;
			case 8:
				{
				setState(127);
				whatAttributeQualifierQuery();
				}
				break;
			case 9:
				{
				setState(128);
				whatRelationQualifierQuery();
				}
				break;
			}
			setState(131);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhatEntityQueryContext extends ParserRuleContext {
		public EntitySetContext entitySet() {
			return getRuleContext(EntitySetContext.class,0);
		}
		public QueryNameContext queryName() {
			return getRuleContext(QueryNameContext.class,0);
		}
		public WhatEntityQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whatEntityQuery; }
	}

	public final WhatEntityQueryContext whatEntityQuery() throws RecognitionException {
		WhatEntityQueryContext _localctx = new WhatEntityQueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_whatEntityQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			entitySet(0);
			setState(134);
			queryName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HowManyEntityQueryContext extends ParserRuleContext {
		public EntitySetContext entitySet() {
			return getRuleContext(EntitySetContext.class,0);
		}
		public CountContext count() {
			return getRuleContext(CountContext.class,0);
		}
		public HowManyEntityQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_howManyEntityQuery; }
	}

	public final HowManyEntityQueryContext howManyEntityQuery() throws RecognitionException {
		HowManyEntityQueryContext _localctx = new HowManyEntityQueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_howManyEntityQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			entitySet(0);
			setState(137);
			count();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhatAttributeQueryContext extends ParserRuleContext {
		public EntitySetContext entitySet() {
			return getRuleContext(EntitySetContext.class,0);
		}
		public QueryAttributeContext queryAttribute() {
			return getRuleContext(QueryAttributeContext.class,0);
		}
		public WhatAttributeQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whatAttributeQuery; }
	}

	public final WhatAttributeQueryContext whatAttributeQuery() throws RecognitionException {
		WhatAttributeQueryContext _localctx = new WhatAttributeQueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_whatAttributeQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			entitySet(0);
			setState(140);
			queryAttribute();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhatRelationQueryContext extends ParserRuleContext {
		public EntitySetGroupContext entitySetGroup() {
			return getRuleContext(EntitySetGroupContext.class,0);
		}
		public QueryRelationContext queryRelation() {
			return getRuleContext(QueryRelationContext.class,0);
		}
		public WhatRelationQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whatRelationQuery; }
	}

	public final WhatRelationQueryContext whatRelationQuery() throws RecognitionException {
		WhatRelationQueryContext _localctx = new WhatRelationQueryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whatRelationQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			entitySetGroup();
			setState(143);
			queryRelation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectAmongQueryContext extends ParserRuleContext {
		public EntitySetContext entitySet() {
			return getRuleContext(EntitySetContext.class,0);
		}
		public SelectAmongContext selectAmong() {
			return getRuleContext(SelectAmongContext.class,0);
		}
		public SelectAmongQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectAmongQuery; }
	}

	public final SelectAmongQueryContext selectAmongQuery() throws RecognitionException {
		SelectAmongQueryContext _localctx = new SelectAmongQueryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_selectAmongQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			entitySet(0);
			setState(146);
			selectAmong();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectBetweenQueryContext extends ParserRuleContext {
		public EntitySetGroupContext entitySetGroup() {
			return getRuleContext(EntitySetGroupContext.class,0);
		}
		public SelectBetweenContext selectBetween() {
			return getRuleContext(SelectBetweenContext.class,0);
		}
		public SelectBetweenQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectBetweenQuery; }
	}

	public final SelectBetweenQueryContext selectBetweenQuery() throws RecognitionException {
		SelectBetweenQueryContext _localctx = new SelectBetweenQueryContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_selectBetweenQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			entitySetGroup();
			setState(149);
			selectBetween();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeSatisfyQueryContext extends ParserRuleContext {
		public EntitySetContext entitySet() {
			return getRuleContext(EntitySetContext.class,0);
		}
		public VerifyContext verify() {
			return getRuleContext(VerifyContext.class,0);
		}
		public QueryAttributeUnderConditionContext queryAttributeUnderCondition() {
			return getRuleContext(QueryAttributeUnderConditionContext.class,0);
		}
		public QueryAttributeContext queryAttribute() {
			return getRuleContext(QueryAttributeContext.class,0);
		}
		public AttributeSatisfyQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeSatisfyQuery; }
	}

	public final AttributeSatisfyQueryContext attributeSatisfyQuery() throws RecognitionException {
		AttributeSatisfyQueryContext _localctx = new AttributeSatisfyQueryContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attributeSatisfyQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			entitySet(0);
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
				{
				setState(152);
				queryAttributeUnderCondition();
				}
				break;
			case T__14:
				{
				setState(153);
				queryAttribute();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(156);
			verify();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhatAttributeQualifierQueryContext extends ParserRuleContext {
		public EntitySetContext entitySet() {
			return getRuleContext(EntitySetContext.class,0);
		}
		public QueryAttrQualifierContext queryAttrQualifier() {
			return getRuleContext(QueryAttrQualifierContext.class,0);
		}
		public WhatAttributeQualifierQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whatAttributeQualifierQuery; }
	}

	public final WhatAttributeQualifierQueryContext whatAttributeQualifierQuery() throws RecognitionException {
		WhatAttributeQualifierQueryContext _localctx = new WhatAttributeQualifierQueryContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_whatAttributeQualifierQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			entitySet(0);
			setState(159);
			queryAttrQualifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhatRelationQualifierQueryContext extends ParserRuleContext {
		public EntitySetGroupContext entitySetGroup() {
			return getRuleContext(EntitySetGroupContext.class,0);
		}
		public QueryRelationQualifierContext queryRelationQualifier() {
			return getRuleContext(QueryRelationQualifierContext.class,0);
		}
		public WhatRelationQualifierQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whatRelationQualifierQuery; }
	}

	public final WhatRelationQualifierQueryContext whatRelationQualifierQuery() throws RecognitionException {
		WhatRelationQualifierQueryContext _localctx = new WhatRelationQualifierQueryContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_whatRelationQualifierQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			entitySetGroup();
			setState(162);
			queryRelationQualifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntitySetGroupContext extends ParserRuleContext {
		public List<EntitySetContext> entitySet() {
			return getRuleContexts(EntitySetContext.class);
		}
		public EntitySetContext entitySet(int i) {
			return getRuleContext(EntitySetContext.class,i);
		}
		public EntitySetGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entitySetGroup; }
	}

	public final EntitySetGroupContext entitySetGroup() throws RecognitionException {
		EntitySetGroupContext _localctx = new EntitySetGroupContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_entitySetGroup);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			entitySet(0);
			setState(165);
			entitySet(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntitySetContext extends ParserRuleContext {
		public EntitySetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entitySet; }
	 
		public EntitySetContext() { }
		public void copyFrom(EntitySetContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EntitySetByFilterContext extends EntitySetContext {
		public FindAllContext findAll() {
			return getRuleContext(FindAllContext.class,0);
		}
		public EntityFilterByAttributeContext entityFilterByAttribute() {
			return getRuleContext(EntityFilterByAttributeContext.class,0);
		}
		public EntityFilterByConceptContext entityFilterByConcept() {
			return getRuleContext(EntityFilterByConceptContext.class,0);
		}
		public EntitySetByFilterContext(EntitySetContext ctx) { copyFrom(ctx); }
	}
	public static class EntitySetAtomContext extends EntitySetContext {
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public EntitySetAtomContext(EntitySetContext ctx) { copyFrom(ctx); }
	}
	public static class EntitySetByOPContext extends EntitySetContext {
		public List<EntitySetContext> entitySet() {
			return getRuleContexts(EntitySetContext.class);
		}
		public EntitySetContext entitySet(int i) {
			return getRuleContext(EntitySetContext.class,i);
		}
		public SetOPContext setOP() {
			return getRuleContext(SetOPContext.class,0);
		}
		public EntitySetByOPContext(EntitySetContext ctx) { copyFrom(ctx); }
	}
	public static class EntitySetNestedContext extends EntitySetContext {
		public EntitySetContext entitySet() {
			return getRuleContext(EntitySetContext.class,0);
		}
		public EntityFilterByRelationContext entityFilterByRelation() {
			return getRuleContext(EntityFilterByRelationContext.class,0);
		}
		public EntityFilterByAttributeContext entityFilterByAttribute() {
			return getRuleContext(EntityFilterByAttributeContext.class,0);
		}
		public EntitySetNestedContext(EntitySetContext ctx) { copyFrom(ctx); }
	}

	public final EntitySetContext entitySet() throws RecognitionException {
		return entitySet(0);
	}

	private EntitySetContext entitySet(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		EntitySetContext _localctx = new EntitySetContext(_ctx, _parentState);
		EntitySetContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_entitySet, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				{
				_localctx = new EntitySetByFilterContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(168);
				findAll();
				setState(171);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__5:
				case T__7:
				case T__8:
				case T__9:
					{
					setState(169);
					entityFilterByAttribute();
					}
					break;
				case T__26:
					{
					setState(170);
					entityFilterByConcept();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case T__27:
				{
				_localctx = new EntitySetAtomContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(173);
				entity();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(187);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(185);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new EntitySetByOPContext(new EntitySetContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_entitySet);
						setState(176);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(177);
						entitySet(0);
						setState(178);
						setOP();
						}
						break;
					case 2:
						{
						_localctx = new EntitySetNestedContext(new EntitySetContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_entitySet);
						setState(180);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(183);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case T__21:
							{
							setState(181);
							entityFilterByRelation();
							}
							break;
						case T__5:
						case T__7:
						case T__8:
						case T__9:
							{
							setState(182);
							entityFilterByAttribute();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					}
					} 
				}
				setState(189);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class EntityFilterByRelationContext extends ParserRuleContext {
		public RelateContext relate() {
			return getRuleContext(RelateContext.class,0);
		}
		public FilterQualifierContext filterQualifier() {
			return getRuleContext(FilterQualifierContext.class,0);
		}
		public FilterConceptContext filterConcept() {
			return getRuleContext(FilterConceptContext.class,0);
		}
		public EntityFilterByRelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entityFilterByRelation; }
	}
